// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TextField snapshots should match snapshot with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": undefined,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 24,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": undefined,
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "test value",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9A9A9A",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 0,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TextField snapshots should match snapshot with all props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Test Title",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Error text",
              ],
              "props": {
                "style": {
                  "color": "#BD1111",
                  "fontSize": 12,
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "marginLeft": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginVertical": 2,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": false,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": false,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": "Enter text",
                "placeholderTextColor": "#686868",
                "readOnly": false,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 24,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": undefined,
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "test value",
              },
              "type": "TextInput",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "aria-role": "button",
                "onPress": [class Function],
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D33232",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 0,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            "Helper text",
          ],
          "props": {
            "style": {
              "color": "#1C1C1C",
              "flexShrink": 1,
              "fontSize": 12,
              "lineHeight": 16,
            },
          },
          "type": "Text",
        },
      ],
      "props": {
        "style": {
          "alignSelf": "stretch",
          "marginTop": 2,
          "maxWidth": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TextField snapshots should match snapshot when disabled 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Disabled Field",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": true,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": undefined,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": true,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 24,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": undefined,
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "disabled value",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#CDCDCD",
          "borderColor": "#4E4E4E",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 0,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TextField snapshots should match snapshot with multiline 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Multiline Field",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": true,
                "nativeID": undefined,
                "numberOfLines": 3,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 120,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": undefined,
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "line 1\\nline 2",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9A9A9A",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 0,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TextField snapshots should match snapshot with error state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Error Field",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "This field is required",
              ],
              "props": {
                "style": {
                  "color": "#BD1111",
                  "fontSize": 12,
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "style": {
              "marginLeft": 4,
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "marginVertical": 2,
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "Enter text here",
                "accessibilityState": {
                  "disabled": undefined,
                },
                "aria-label": "Text input field",
                "autoCapitalize": "sentences",
                "autoCorrect": true,
                "blurOnSubmit": true,
                "enterKeyHint": undefined,
                "keyboardType": "default",
                "multiline": undefined,
                "nativeID": undefined,
                "numberOfLines": 1,
                "onBlur": [Function],
                "onChangeText": [Function],
                "onContentSizeChange": [Function],
                "onFocus": [Function],
                "onSubmitEditing": [Function],
                "placeholder": undefined,
                "placeholderTextColor": "#686868",
                "readOnly": undefined,
                "ref": [Function],
                "secureTextEntry": false,
                "style": {
                  "color": "#1C1C1C",
                  "flex": 1,
                  "fontFamily": "text",
                  "fontSize": 16,
                  "gap": 10,
                  "height": 24,
                  "paddingVertical": 0,
                  "width": "100%",
                },
                "testID": undefined,
                "textContentType": "none",
                "underlineColorAndroid": "transparent",
                "value": "",
              },
              "type": "TextInput",
            },
          ],
          "props": {
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D33232",
          "borderRadius": 4,
          "borderWidth": 1,
          "flexDirection": "column",
          "gap": 0,
          "overflow": "hidden",
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
